@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 6, 2008</p>
+      <p>Last Updated: September 7, 2008</p>
     </td>
   </tr>
 </table>
@@ -1082,6 +1082,7 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  and mounted.
 	* Corrected a critical bug that prevent recvfrom from receiving packets from
 	  any remote UDP port.
+	* NSH: Add hexadecimal dump command (xd)
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
